<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Ajout de l'affichage type "ScannerQRCode" -->
    <com.budiyev.android.codescanner.CodeScannerView
        android:id="@+id/scanner_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:autoFocusButtonColor="#FF0000"
        app:autoFocusButtonVisible="true"
        app:flashButtonColor="#FFAA00"
        app:flashButtonVisible="true"
        app:frameAspectRatioHeight="1"
        app:frameAspectRatioWidth="1"
        app:frameColor="@android:color/holo_red_dark"
        app:frameCornersRadius="25dp"
        app:frameCornersSize="50dp"
        app:frameSize="0.75"
        app:frameThickness="5dp"
        app:maskColor="#99000000" />

    <!-- Bouton Open -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="680dp"
        android:backgroundTint="#ff0000"
        android:text="@string/app_open"
        android:id="@+id/button_list"/>

    <!-- Bouton Reset -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="680dp"
        android:backgroundTint="#FF5500"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_reset"
        android:id="@+id/button_reset"/>

    <!-- Bouton Num -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_num"
        android:layout_marginTop="680dp"
        android:layout_marginLeft="300dp"
        android:backgroundTint="#ffAA00"
        android:id="@+id/button_select_num"/>

    <!-- TextView Latitude -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="550dp"
        android:textColor="#FF0000"
        android:id="@+id/latitude"
        android:text="@string/app_latitude"/>

    <!-- TextView Longitude -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="565dp"
        android:textColor="#ff4400"
        android:id="@+id/longitude"
        android:text="@string/app_longitude"/>

    <!-- TextView Altitude -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="580dp"
        android:textColor="#FF8800"
        android:id="@+id/altitude"
        android:text="@string/app_altitude"/>

    <!-- TextView Vitesse -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="595dp"
        android:textColor="#FFCC00"
        android:id="@+id/vitesse"
        android:text="@string/app_speed"/>

    <!-- TextView Numero -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="610dp"
        android:textColor="#FFFF00"
        android:id="@+id/current_num"
        android:text="@string/app_numero"/>
</FrameLayout>